--- a/app/src/main/res/layout/fragments_register.xml
+++ b/app/src/main/res/layout/fragments_register.xml
@@ -106,7 +106,7 @@
             android:layout_marginTop="15dp"/>
 
 
-        <androidx.appcompat.widget.AppCompatButton
+        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
             android:id="@+id/buttonRegisterRegister"
             android:layout_width="0dp"
             android:layout_height="@dimen/mediumButtonHeight"
