--- a/app/src/main/res/layout/fragments_register.xml
+++ b/app/src/main/res/layout/fragments_register.xml
@@ -116,7 +116,7 @@
             app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
             android:layout_marginTop="15dp"
             android:text="@string/register"
-            />
+            app:spinning_bar_color="@color/white"/>
 
         <ImageView
             android:id="@+id/facebookLogin"
