--- a/app/src/main/res/drawable/bottom_navigation_background.xml
+++ b/app/src/main/res/drawable/bottom_navigation_background.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#F5F8FA" />
-    <corners android:radius="@dimen/buttonCorners" />
+
+    <solid android:color="@color/g_white" />
+    <corners
+        android:bottomLeftRadius="7dp"
+        android:bottomRightRadius="7dp" />
+
+
 </shape>
