--- a/app/src/main/res/layout/fragments_account_options.xml
+++ b/app/src/main/res/layout/fragments_account_options.xml
@@ -3,12 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/blurry_background"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -40,7 +40,7 @@
             android:text="@string/rightAddress"
             android:textAlignment="center"
             android:gravity="center"
-            android:textSize="35sp"/>
+            android:textSize="35sp" />
 
         <TextView
             android:id="@+id/tvQuality"
@@ -53,7 +53,7 @@
             android:textAlignment="center"
             android:gravity="center"
             android:text="@string/quality"
-            android:layout_marginTop="15dp"/>
+            android:layout_marginTop="15dp" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttonRegisterAccountOptions"
@@ -64,8 +64,7 @@
             app:layout_constraintStart_toStartOf="@id/tvQuality"
             app:layout_constraintEnd_toEndOf="@id/tvQuality"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:text="@string/register"
-            />
+            android:text="@string/register" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttonLoginAccountOptions"
@@ -76,8 +75,7 @@
             app:layout_constraintStart_toStartOf="@id/tvQuality"
             app:layout_constraintEnd_toEndOf="@id/tvQuality"
             android:layout_marginTop="10dp"
-            android:text="@string/login"
-            />
+            android:text="@string/login" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
