--- a/app/src/main/res/layout/fragments_introduction.xml
+++ b/app/src/main/res/layout/fragments_introduction.xml
@@ -43,7 +43,7 @@
         android:text="@string/rightAddress"
         android:textAlignment="center"
         android:gravity="center"
-        android:textSize="35sp"/>
+        android:textSize="35sp" />
 
     <TextView
         android:id="@+id/tvQuality"
@@ -56,14 +56,14 @@
         android:textAlignment="center"
         android:gravity="center"
         android:text="@string/quality"
-        android:layout_marginTop="15dp"/>
+        android:layout_marginTop="15dp" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/texture_right"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/guidelineLeftTexture"/>
+        app:layout_constraintTop_toBottomOf="@id/guidelineLeftTexture" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonStart"
@@ -74,9 +74,7 @@
         app:layout_constraintStart_toStartOf="@id/tvQuality"
         app:layout_constraintEnd_toEndOf="@id/tvQuality"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="@string/start"
-        />
-
+        android:text="@string/start" />
 
 
     <androidx.constraintlayout.widget.Guideline
